added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/background-manager/store/cache/
+wp-content/updraft/log*
