updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/background-manager/store/cache/
 wp-content/updraft/log*
+wp-content/updraft
